samples/_failures_safe/1761610460_f1504e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ccc1aeb.c: In function ‘main’:
./samples/SAFE/__tmp_9ccc1aeb.c:186:36: error: expected ‘;’ at end of input
  186 |     for (int i = 0; i < token_count
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_9ccc1aeb.c:186:5: error: expected declaration or statement at end of input
  186 |     for (int i = 0; i < token_count
      |     ^~~
